# resource-scanner-tool

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/coordinates/: mod.rs
src/errors/: mod.rs
src/tests/: mod.rs
src/tool/: mod.rs
src/utils/: mod.rs
