[package]
authors = ["Another one bytes the Rust"]
name = "resource-scanner-tool"
version = "1.0.0"
edition = "2021"
description = "The Resource Scanner Tool provides functionality to scan an area around a robot for a specified content and pattern."
documentation = ""
readme = "README.md"
repository = "https://github.com/Another-one-bytes-the-Rust/resource-scanner-tool"
exclude = ["/.idea"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "another_one_bytes_the_dust_resource_scanner_tool"
path = "src/lib.rs"

[dependencies]
robotics_lib = {version = "0.1.21", registry = "kellnr"}

